f' Generated by UML Generator
' Encoded: ZPCnQyCm48Lt_ueR4s93eLk6aYo5BiNWgPGEYdLnH6qfbUI2c-Q_zsHPZkoKDej1ZtTFzpwiZR5CsxQf4_Ckv95fra1PCsEsrcgnQoq-bKeMuWlXBZa8Zb0ANTQO9BqBSjH6IJWb09ba3QwXe3bPkJFZNACniPJHP-Ld5h4zXPbvwOmLscSoBPPHX1EttZlLpKMVPwtXKmdkJ5PvAHezXog5RJbAwxiSjQg8HRnxXqolGKZh3dkatRbgTuGYz1e2_YwMmYmwXJ4uXIWs4CYz_Qfiq6TnKLaQVg5eD-ctTcEzCjuuTJzYptgivVnEYxUwbINRxpr9KnwKgcEGHzRzmeu6_YCtZIAIbw10g-WjLx06UHemBP-pxggyq-9BRYl_qQAnGidx7i3gH4_CYl8C3HDomNGrDdfz2uaq6tw_BFj-69vLuZ76oWObfzVw0m
' URL: http://www.plantuml.com/plantuml/uml/ZPCnQyCm48Lt_ueR4s93eLk6aYo5BiNWgPGEYdLnH6qfbUI2c-Q_zsHPZkoKDej1ZtTFzpwiZR5CsxQf4_Ckv95fra1PCsEsrcgnQoq-bKeMuWlXBZa8Zb0ANTQO9BqBSjH6IJWb09ba3QwXe3bPkJFZNACniPJHP-Ld5h4zXPbvwOmLscSoBPPHX1EttZlLpKMVPwtXKmdkJ5PvAHezXog5RJbAwxiSjQg8HRnxXqolGKZh3dkatRbgTuGYz1e2_YwMmYmwXJ4uXIWs4CYz_Qfiq6TnKLaQVg5eD-ctTcEzCjuuTJzYptgivVnEYxUwbINRxpr9KnwKgcEGHzRzmeu6_YCtZIAIbw10g-WjLx06UHemBP-pxggyq-9BRYl_qQAnGidx7i3gH4_CYl8C3HDomNGrDdfz2uaq6tw_BFj-69vLuZ76oWObfzVw0m
' Generated on: 2025-11-02T15:24:34.012944200

@startuml
skinparam classAttributeIconSize 0
hide circle

class Person {
  -name: String
  -address: String
  --
  +Person(name: String, address: String)
  +getName(): String
  +getAddress(): String
  +setAddress(address: String): void
  +toString(): String
}

class Student {
  -program: String
  -year: int
  -fee: double
  --
  +Student(name: String, address: String, program: String, year: int, fee: double)
  +getProgram(): String
  +setProgram(program: String): void
  +getYear(): int
  +setYear(year: int): void
  +getFee(): double
  +setFee(fee: double): void
  +toString(): String
}

class Staff {
  -school: String
  -pay: double
  --
  +Staff(name: String, address: String, school: String, pay: double)
  +getSchool(): String
  +setSchool(school: String): void
  +getPay(): double
  +setPay(pay: double): void
  +toString(): String
}

class question3 {
  +{static} main(args: String[]): void
}

Student --|> Person
Staff --|> Person
@enduml